<resources>
    <string name="app_name">Poop</string>
    <string name="welcome_to_poop">PEOPLE ORDER OUR PATTY</string>
    <string name="todo">TODO</string>
    <string name="food_truck">Food Truck</string>
    <string name="vendors">VENDOR</string>
    <string name="login_as">Login as:</string>
    <string name="create_account"><u>Register here.</u></string>
    <string name="create_your_account">Tell us your name and your company</string>
    <string name="address">Where is your business?</string>
    <string name="ftArea">Available area</string>
    <string name="contact">Contact Information</string>
    <string name="entity">What is your business?</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="UserAndPass">Create username and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmP">Confirm password</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="next">Next</string>
    <string name="zip">Zip Code</string>
    <string name="show">Show</string>
    <string name="PassHint">At least 8 characters, one Uppercase, one lowercase, and one special character.</string>
    <string name="ConfirmErr">Does not match</string>
    <string name="FTname">Food Truck Name</string>
    <string name="submit">Submit</string>
    <string name="createsuccess">Your account was successfully created!</string>
    <string name="createfailure">Oops! Fail to create your account. Please check your connection and try again</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="remember">Remember me?</string>
    <string name="FTImg">FTimg</string>
    <string name="description">Description</string>
    <string name="search">Search...</string>
    <string name="importIMG">Change profile image</string>
    <string name="changePass"><u>Change password?</u></string>


</resources>
