<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Login"
    android:background="@drawable/gradient"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="195dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/til_username_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/poopicon" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/btn_rnd_sel"
        android:fontFamily="@font/asap_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/creAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPass"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/creAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username_login"
        android:layout_width="230dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/username"
        android:textColorHint="#11ffffff"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/til_password_login"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleDrawable="@drawable/ic_password_visibility"
        app:passwordToggleEnabled="false"
        app:passwordToggleTint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_username"
            android:inputType="text"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            android:textCursorDrawable="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_login"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/password"
        android:textColorHint="#11ffffff"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/forgotPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleDrawable="@drawable/ic_password_visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_pass"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat"

            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/forgotPass"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_login" />

</android.support.constraint.ConstraintLayout>
</ScrollView>