<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Create3">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="132dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/city"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="226dp"
        android:layout_height="66dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/ftArea"
        android:textColor="#ffffff"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="28dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/asap_bold"
        android:inputType="text|textPersonName"
        android:labelFor="@id/password"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/state"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/zip"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/asap_bold"
        android:inputType="textPersonName"
        android:labelFor="@id/state"
        android:maxLength="2"
        android:nextFocusRight="@+id/zip"
        android:nextFocusDown="@id/zip"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/zip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/asap_bold"
        android:inputType="number"
        android:labelFor="@id/zip"
        android:maxLength="5"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/state"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:targetApi="o" />
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next"
        android:fontFamily="@font/asap_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>