<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreateContactInfo">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="132dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/NameHeader"
        android:layout_width="226dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/UserAndPass"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/username"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameHeader" />

    <!--<EditText-->
        <!--android:id="@+id/password"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:autofillHints=""-->
        <!--android:backgroundTint="#ffffff"-->
        <!--android:fontFamily="@font/asap_bold"-->
        <!--android:textColor="#ffffff"-->
        <!--android:ems="10"-->
        <!--android:inputType="textPassword"-->
        <!--android:labelFor="@id/password"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="1.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView6"-->
        <!--tools:targetApi="o" />-->

    <!--android:drawableStart="@drawable/ic_action_pass"-->
    <!--android:drawableLeft="@drawable/ic_action_pass"-->
    <!--android:hint="Password"-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:passwordToggleDrawable="@drawable/ic_password_visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#ffffff">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#ffffff"
            android:fontFamily="@font/asap_bold"
            android:inputType="textPassword"
            android:textColor="#ffffff" />
    </android.support.design.widget.TextInputLayout>
    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/asap_bold"
        android:textColor="#ffffff"
        android:autofillHints=""
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/username"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:targetApi="o" />
    <TextView
        android:id="@+id/submit"
        android:layout_width="61dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/confirmP"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passHint" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:passwordToggleDrawable="@drawable/ic_password_visibility"
        app:helperText="@string/address"
        app:helperTextEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#ffffff">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#ffffff"
            android:fontFamily="@font/asap_bold"
            android:inputType="textPassword"
            android:textColor="#ffffff" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/passHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/PassHint"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/confirmErr"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/ConfirmErr"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />

    <!--<EditText-->
        <!--android:id="@+id/confirm"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:backgroundTint="#ffffff"-->
        <!--android:ems="10"-->
        <!--android:inputType="textPassword"-->
        <!--android:labelFor="@id/confirm"-->
        <!--android:autofillHints=""-->
        <!--tools:targetApi="o"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView9" />-->

</android.support.constraint.ConstraintLayout>